# api/openapi/dashboard/v1alpha1/model__api_v1alpha1_user_addons.go
@@ -1,0 +1,43 @@
+/*
+ * Cosmo Dashboard API
+ *
+ * Manipulate cosmo dashboard resource API
+ *
+ * API version: v1alpha1
+ * Contact: jlandowner8@gmail.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package v1alpha1
+
+type ApiV1alpha1UserAddons struct {
+	Template string `json:"template"`
+
+	Vars map[string]string `json:"vars,omitempty"`
+}
+
+// AssertApiV1alpha1UserAddonsRequired checks if the required fields are not zero-ed
+func AssertApiV1alpha1UserAddonsRequired(obj ApiV1alpha1UserAddons) error {
+	elements := map[string]interface{}{
+		"template": obj.Template,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertRecurseApiV1alpha1UserAddonsRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of ApiV1alpha1UserAddons (e.g. [][]ApiV1alpha1UserAddons), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseApiV1alpha1UserAddonsRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aApiV1alpha1UserAddons, ok := obj.(ApiV1alpha1UserAddons)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertApiV1alpha1UserAddonsRequired(aApiV1alpha1UserAddons)
+	})
+}
